[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.5
margin_top = 20.0
margin_right = 75.5
margin_bottom = 14.0
text = "Battle Pong"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -80.0
margin_right = 132.5
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_two_learner" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 265.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="but_local_two_player" type="Button" parent="HBoxContainer/vbox_two_learner"]
margin_right = 265.0
margin_bottom = 20.0
text = "Local 2 Player"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/vbox_two_learner"]
margin_top = 24.0
margin_right = 265.0
margin_bottom = 28.0

[node name="but_two_re_with_images" type="Button" parent="HBoxContainer/vbox_two_learner"]
margin_top = 32.0
margin_right = 265.0
margin_bottom = 52.0
text = "2 RE with Images"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/vbox_two_learner"]
margin_top = 56.0
margin_right = 265.0
margin_bottom = 80.0

[node name="but_two_re_with_position" type="Button" parent="HBoxContainer/vbox_two_learner/HBoxContainer"]
margin_right = 126.0
margin_bottom = 24.0
text = "2 RE with Position"

[node name="cb_rendering_enabled" type="CheckBox" parent="HBoxContainer/vbox_two_learner/HBoxContainer"]
margin_left = 130.0
margin_right = 265.0
margin_bottom = 24.0
text = "Enable rendering"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/vbox_two_learner"]
margin_top = 84.0
margin_right = 265.0
margin_bottom = 88.0

[node name="but_trainer_with_images" type="Button" parent="HBoxContainer/vbox_two_learner"]
margin_top = 92.0
margin_right = 265.0
margin_bottom = 112.0
text = "RE Trainer with Images"

[node name="but_trainer_with_position" type="Button" parent="HBoxContainer/vbox_two_learner"]
margin_top = 116.0
margin_right = 265.0
margin_bottom = 136.0
text = "RE Trainer with Position"

[node name="but_settings" type="Button" parent="HBoxContainer/vbox_two_learner"]
margin_top = 140.0
margin_right = 265.0
margin_bottom = 160.0
text = "Settings"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 269.0
margin_right = 273.0
margin_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 277.0
margin_right = 421.0
margin_bottom = 160.0

[node name="lbl_GameModifier" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 14.0
text = "Game Modifier"

[node name="ckb_Obstackles" type="CheckButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 144.0
margin_bottom = 58.0
text = "Obstacles"

[node name="lbl_game_running" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -93.5
margin_top = 59.0
margin_right = 93.5
margin_bottom = 73.0
text = "Game runs without rendering"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/vbox_two_learner/but_local_two_player" to="." method="_on_but_local_two_player_pressed"]
[connection signal="pressed" from="HBoxContainer/vbox_two_learner/but_two_re_with_images" to="." method="_on_but_two_re_with_images_pressed"]
[connection signal="pressed" from="HBoxContainer/vbox_two_learner/HBoxContainer/but_two_re_with_position" to="." method="_on_but_two_re_with_position_pressed"]
[connection signal="pressed" from="HBoxContainer/vbox_two_learner/HBoxContainer/cb_rendering_enabled" to="." method="_on_cb_rendering_enabled_pressed"]
[connection signal="pressed" from="HBoxContainer/vbox_two_learner/but_trainer_with_images" to="." method="_on_but_trainer_with_images_pressed"]
[connection signal="pressed" from="HBoxContainer/vbox_two_learner/but_trainer_with_position" to="." method="_on_but_trainer_with_position_pressed"]
[connection signal="pressed" from="HBoxContainer/vbox_two_learner/but_settings" to="." method="_on_but_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ckb_Obstackles" to="." method="_on_ckb_Obstackles_pressed"]
